Wed May 17 09:02:45 2000  Carlos O'Ryan  <coryan@uci.edu>

        * tests/CDR_Array_Test.cpp:
          Workaround problems with old versions of g++, in some cases it
          gets confused with sizeof(T) inside a template.

Wed May 17 10:54:05 2000  Jeff Parsons  <parsons@cs.wustl.edu>

	* examples/ConfigViewer/ConfigTreeCtrl.cpp:
	* examples/ConfigViewer/ConfigTreeCtrl.h:
 	* examples/ConfigViewer/ConfigurationViewer.cpp:
	* examples/ConfigViewer/ConfigurationViewer.dsp:
	* examples/ConfigViewer/ConfigurationViewer.dsw:
	* examples/ConfigViewer/ConfigurationViewer.rc:
	* examples/ConfigViewer/MainFrame.cpp:
	* examples/ConfigViewer/MainFrame.h:
	* examples/ConfigViewer/README:
	* examples/ConfigViewer/ValueDlg.cpp:
	* examples/ConfigViewer/ValueDlg.h:
	* examples/ConfigViewer/ValueListCtrl.cpp:
	* examples/ConfigViewer/ValueListCtrl.h:
	* examples/ConfigViewer/mondrian.ico:
	* examples/ConfigViewer/mondrian.xpm:
	* examples/ConfigViewer/stdafx.cpp:
	* examples/ConfigViewer/stdafx.h:
	  Chris Hafey's ACE_Configuration viewer/editor for vxWindows.
	  For details, see the README file or email Chris at
	  <chris@stentorsoft.com>.

Tue May 16 12:01:56 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/Msg_WFMO_Reactor.cpp:
        * ace/Msg_WFMO_Reactor.h:

          Applied some patches that Bruce Trask <BTRASK@contactsystems.com>
          sent for building ACE on Pharlap.

        * ace/OS.cpp:
        * ace/OS.h:
        * ace/Process.cpp:
        * ace/ace_wchar.h:

          GetEnvironmentStrings is the only Windows API function that I've
          seen that doesn't follow the same FuncA/FuncW naming that the
          rest do.  So I added a wrapper in ACE_OS (getenvstrings) and it
          does the appropriate magic in the .cpp file to get this to work.
          
          This only showed up when UNICODE was defined but ACE_USES_WCHAR
          wasn't.

        * ace/Process.cpp:

          Removed a comment that stated that the WinCE version of